<resources>
    <string name="app_name">ShoeStore</string>
    <string name="email_text">Email:</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_text">Password:</string>
    <string name="password_hint">Enter your password</string>
    <string name="existing_login_button">Login with existing user</string>
    <string name="new_login_button">Login with new user</string>

    <string name="header_welcome_text">Welcome!</string>
    <string name="paragraph_welcome_text">Welcome in this app! Where you can check your shoes and also store a new one.\n\n\nSo stop talking and let\'s do it!</string>
    <string name="welcome_button_text">Let\'s go!</string>
    <string name="header_instruction_text">Instructions</string>
    <string name="paragraph_instruction1_text">1. On the next screen you can scroll through various shoes</string>
    <string name="paragraph_instruction2_text">2. You can also add a new one by clicking +(plus) button in the lower right corner</string>
    <string name="paragraph_instruction3_text">3. And finally you can see a new shoe in the list.\n\nHave fun!</string>
    <string name="logout_menu">Logout</string>

<!--    ShoeDetail screen-->
    <string name="shoe_name_detail_text">Shoe Name</string>
    <string name="company_detail_text">Company</string>
    <string name="shoe_size_detail_text">Size</string>
    <string name="description_detail_text">Description</string>

    <string name="shoe_name_detail_hint">Enter shoe model…</string>
    <string name="company_detail_hint">e.g. Adidas, Nike,…</string>
    <string name="shoe_size_detail_hint">e.g. 10.5</string>
    <string name="description_detail_hint">Type condition, color, season,…</string>

    <string name="save_generic">Save</string>
    <string name="cancel_generic">Cancel</string>
    <string name="login_appbar">Login</string>
    <string name="welcome_appbar">Welcome</string>
    <string name="instruction_appbar">Instructions</string>
    <string name="shoes_appbar">Shoes</string>
    <string name="shoe_details_appbar">Shoe details</string>
</resources>
