<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.shoedetail.ShoeDetailFragment">

    <data>

        <variable
            name="sharedViewModel"
            type="com.udacity.shoestore.SharedViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/shoe_name_detail_text"
            style="@style/LabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/shoe_name_detail_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/company_detail_text"
            style="@style/LabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/company_detail_text"
            app:layout_constraintStart_toStartOf="@+id/shoe_name_detail_edit"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_detail_edit" />

        <TextView
            android:id="@+id/shoe_size_detail_text"
            style="@style/LabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/shoe_size_detail_text"
            app:layout_constraintStart_toStartOf="@+id/company_detail_edit"
            app:layout_constraintTop_toBottomOf="@+id/company_detail_edit" />

        <TextView
            android:id="@+id/description_detail_text"
            style="@style/LabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/description_detail_text"
            app:layout_constraintStart_toStartOf="@+id/shoe_size_detail_edit"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size_detail_edit" />

        <EditText
            android:id="@+id/shoe_name_detail_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/shoe_name_detail_hint"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_detail_text" />

        <EditText
            android:id="@+id/company_detail_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/company_detail_hint"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/company_detail_text"
            app:layout_constraintTop_toBottomOf="@+id/company_detail_text" />

        <EditText
            android:id="@+id/shoe_size_detail_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/shoe_size_detail_hint"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/shoe_size_detail_text"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size_detail_text" />

        <EditText
            android:id="@+id/description_detail_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/description_detail_hint"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_detail_text" />

        <Button
            android:id="@+id/cancel_detail_button"
            style="@style/ButtonColoredInverse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/cancel_generic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/save_detail_button"
            style="@style/ButtonColored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="@{() -> sharedViewModel.onDataSave()}"
            android:text="@string/save_generic"
            app:layout_constraintBottom_toTopOf="@+id/cancel_detail_button"
            app:layout_constraintEnd_toEndOf="@+id/cancel_detail_button"
            app:layout_constraintStart_toStartOf="@+id/cancel_detail_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>