<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.screens.login.LoginFragment"
        android:label="@string/login_appbar"
        tools:layout="@layout/login_fragment">
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.screens.welcome.WelcomeFragment"
        android:label="@string/welcome_appbar"
        tools:layout="@layout/welcome_fragment" >
        <action
            android:id="@+id/action_welcomeFragment_to_instructionFragment"
            app:destination="@id/instructionFragment"
            app:launchSingleTop="true" />
    </fragment>
    <fragment
        android:id="@+id/instructionFragment"
        android:name="com.udacity.shoestore.screens.instruction.InstructionFragment"
        android:label="@string/instruction_appbar"
        tools:layout="@layout/instruction_fragment" >
        <action
            android:id="@+id/action_instructionFragment_to_shoesFragment2"
            app:destination="@id/shoesFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/instructionFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/shoesFragment"
        android:name="com.udacity.shoestore.screens.shoes.ShoesFragment"
        android:label="@string/shoes_appbar"
        tools:layout="@layout/shoes_fragment" >
        <action
            android:id="@+id/action_shoesFragment_to_shoeDetailFragment"
            app:destination="@id/shoeDetailFragment"
            app:launchSingleTop="true" />
        <action
            android:id="@+id/action_shoesFragment_to_loginFragment2"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/shoesFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/shoeDetailFragment"
        android:name="com.udacity.shoestore.screens.shoedetail.ShoeDetailFragment"
        android:label="@string/shoe_details_appbar"
        tools:layout="@layout/shoe_detail_fragment" >
        <action
            android:id="@+id/action_shoeDetailFragment_to_shoesFragment"
            app:destination="@id/shoesFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/shoeDetailFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>