<?xml version="1.0" encoding="utf-8"?><!-- For this very simple layout I used Linear layout
because it's easier to read code and more efficient for system-->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.welcome.WelcomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/header_welcome_text"
            style="@style/HeaderText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_horizontal"
            android:text="@string/header_welcome_text" />

        <TextView
            android:id="@+id/paragraph_welcome_text"
            style="@style/ParagraphText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_weight="6"
            android:text="@string/paragraph_welcome_text" />

        <Button
            android:id="@+id/welcome_button"
            style="@style/ButtonColored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/welcome_button_text" />
    </LinearLayout>

</layout>